<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_NewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_NewGameButton"
            android:textColor="@android:color/black"
            android:textSize="38sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_player1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/text_Player1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_scorePlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_PlayerScore1"
                android:textColor="@color/colorScore"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_player2"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/text_Player2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_scorePlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_PlayerScore2"
                android:textColor="@color/colorScore"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image-leftDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/dice6" />

        <ImageView
            android:id="@+id/image_rightDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/dice6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorScore"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_currentPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Current"
                android:textColor="@android:color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_currentScorePlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_CurrentScore2"
                android:textColor="@android:color/white"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorScore"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_currentPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Current"
                android:textColor="@android:color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_currentScorePlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_CurrentScore1"
                android:textColor="@android:color/white"
                android:textSize="35sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_Roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_RollButton"
                android:textColor="@android:color/black"
                android:textSize="38sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_Hold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_HoldButton"
                android:textColor="@android:color/black"
                android:textSize="38sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>